--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Alpha clash pro</title>
+    <!-- daisyui an talwind css --> 
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@latest/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- custom css -->
+     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <section class="home">
+
+    </section>
+    <section class="play-ground">
+
+    </section>
+    <section class="score">
+        
+    </section>
 </body>
 </html>
