--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                     <button class="btn rounded-full bg-purple-300 text-white px-4">
                         Life
                        <img src="images/Vector.svg" alt="">
-                        <span>1</span>
+                        <span id="current-life">5</span>
                       </button>
                       <button class="btn rounded-full bg-purple-700 text-white px-4">
                         score
                        <img src="images/monetization_on.svg" alt="">
-                        <span>1</span>
+                        <span id="current-score">0</span>
                       </button>
                 </div>
           </div> 
